[package]
name = "flow"
version = "0.1.0"
authors = ["Daniel Mircea <daniel@viseztrance.com>"]

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
notify = "2.6"
getopts = "0.2"
toml = "0.2"
rustc-serialize = "0.3"
regex = "0.1"
unicode-width = "0.1"

[dependencies.ncurses]
version = "5.80.0"
features = ["menu", "wide"]
