[package]
name = "flow"
version = "0.1.0"
authors = ["Daniel Mircea <daniel@viseztrance.com>"]

[[bin]]
name = "flow"
path = "src/bin/flow.rs"

[lib]
name = "flow"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
notify = "2.6"
getopts = "0.2"
toml = "0.2"
rustc-serialize = "0.3"
regex = "0.1"
lazy_static = "0.2"
unicode-width = "0.1.3"
unicode-segmentation = "0.1.0"

[dependencies.ncurses]
version = "5.80"
features = ["menu", "wide", "panel"]
