[package]
name = "flow"
version = "0.3.1"
description = "A realtime log analyzer"
authors = ["Daniel Mircea <daniel@viseztrance.com>"]
repository = "https://github.com/viseztrance/flow"
homepage = "https://github.com/viseztrance/flow"
documentation = "https://github.com/viseztrance/flow"
keywords = ["log", "tui", "search", "tail"]
readme = "README.md"
license = "GPL-3.0"

[[bin]]
name = "flow"
path = "src/bin/flow.rs"

[lib]
name = "flow"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
docopt = "0.6.86"
toml = "0.2"
rustc-serialize = "0.3"
regex = "0.1"
time = "0.1"
lazy_static = "0.2"
unicode-width = "0.1.3"
unicode-segmentation = "0.1.0"

[dependencies.ncurses]
version = "5.80"
features = ["menu", "wide", "panel"]
